projeto cordel feito do meu jeito

--- a/projeto/index.html
+++ b/projeto/index.html
@@ -38,7 +38,7 @@
         </div>
     </section>
 
-    <section class="pagina">
+    <section class="pagina" id="duplo">
         <div>
             <p>Arroba agora não pesa</p>
             <p>É parte de um endereço</p>
@@ -81,14 +81,18 @@
             <p>Abriu outro aplicativo</p>
             <p>O mundo ficou cativo</p>
             <p>Da tecnologia do agora.</p>
-            <p>Felizmente, pra orar</p>
-            <p>Não precisa de internet</p>
-            <p>Deus escuta todo mundo</p>
-            <p>Se quiser, faça esse teste</p>
-            <p>Dois pontos são dois joelhos</p>
-            <p>Seus lábios são aparelhos</p>
-            <p>Deixe que Deus interprete.</p>
-        </div>
+            </div>
+
+            <div>
+                <p>Felizmente, pra orar</p>
+                <p>Não precisa de internet</p>
+                <p>Deus escuta todo mundo</p>
+                <p>Se quiser, faça esse teste</p>
+                <p>Dois pontos são dois joelhos</p>
+                <p>Seus lábios são aparelhos</p>
+                <p>Deixe que Deus interprete.</p>
+            </div>
+        
     </section>
 
     <footer>
