--- a/projeto/index.html
+++ b/projeto/index.html
@@ -38,7 +38,7 @@
         </div>
     </section>
 
-    <section class="pagina" id="duplo">
+    <section class="pagina" class="duplo1">
         <div>
             <p>Arroba agora não pesa</p>
             <p>É parte de um endereço</p>
@@ -49,7 +49,7 @@
             <p>Ele vale um alto preço.</p>
         </div>
 
-        <div>
+        <div class="duplo2">
             <p>Pra piorar a liguagem</p>
             <p>O emoticom é um risco</p>
             <p>Tem símbolo para tudo</p>
@@ -72,7 +72,7 @@
         </div>
     </section>
 
-    <section class="pagina">
+    <section class="pagina" class="duplo1">
         <div>
             <p>Agora, escrevo e envio</p>
             <p>Chegando na mesma hora</p>
@@ -83,7 +83,7 @@
             <p>Da tecnologia do agora.</p>
             </div>
 
-            <div>
+            <div class="duplo2">
                 <p>Felizmente, pra orar</p>
                 <p>Não precisa de internet</p>
                 <p>Deus escuta todo mundo</p>
